<resources>
    <string name="app_name">BasketballCounter</string>
    <string name="team1Name">Team 1</string>
    <string name="three">+3 Points</string>
    <string name="two">+2 Points</string>
    <string name="freeThrow">Free Throw</string>
    <string name="team2Name">Team 2</string>
    <string name="ZeroScore">0</string>
    <string name="scoreCounter">Score Counter</string>
    <string name="reset">Reset</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="display">Display</string>
    <string name="pog">Vinny Pog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="winner_logo">Winner Logo</string>
    <string name="intents">Part 1: Intents</string>
    <string name="cityName">Worcester</string>
</resources>
