<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_main">
    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/team1Name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="12"
                        android:maxLength="6"
                        android:singleLine="true"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:text="@string/team1Name"
                        android:textAlignment="center"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/team1Score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="22dp"
                    android:text="@string/ZeroScore"
                    android:textColor="#000000"
                    android:textSize="60sp" />

                <Button
                    android:id="@+id/threeTeam1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="26dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/three" />

                <Button
                    android:id="@+id/twoTeam1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="26dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/two" />

                <Button
                    android:id="@+id/oneTeam1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="26dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/freeThrow" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/holo_red_dark" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/team2Name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:ems="12"
                        android:maxLength="6"
                        android:singleLine="true"
                        android:fontFamily="sans-serif-black"
                        android:gravity="center"
                        android:text="@string/team2Name"
                        android:textAlignment="center"
                        android:textSize="16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/team2Score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="22dp"
                    android:text="@string/ZeroScore"
                    android:textColor="#000000"
                    android:textSize="60sp" />

                <Button
                    android:id="@+id/threeTeam2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="26dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/three" />

                <Button
                    android:id="@+id/twoTeam2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="26dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/two" />

                <Button
                    android:id="@+id/oneTeam2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="26dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/freeThrow" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/resetButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/reset" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/save" />

            <Button
                android:id="@+id/displayButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/display" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>